log/build_2025-09-17_14-01-14/low_level/stderr.log
  File "/home/bagus/ichimonji/odometry/install/low_level/lib/python3.10/site-packages/low_level/learn_mavros.py", line 3
    from mavros_msgs.msg import
                               ^
SyntaxError: invalid syntax

